--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}Bienvenue!{% endblock %}</title>
+        <title>{% block title %}HomeAway Bienvenue My Agency!{% endblock %}</title>
         {% block stylesheets %}
         <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lumen/bootstrap.min.css" rel="stylesheet" integrity="sha384-715VMUUaOfZR3/rWXZJ9agJ/udwSXGEigabzUbJm2NR4/v5wpDy8c14yedZN6NL7" crossorigin="anonymous">
         <!-- <link rel="stylesheet" href="https:// style-perso .css"> -->
@@ -26,7 +26,8 @@
               </div>{% endblock %}
             {% block navbar %}
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">My Agency</a>
+                <a class="navbar-brand" href="{{ path('home_myagency') }}">My Agency</a>
+                <!-- <a class="navbar-brand" href="/homeaway">My Agency</a> -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor02">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="{{ path('home_away') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Buy</a>
@@ -55,9 +56,9 @@
             {% endblock %}
             {% block container %}
             <div class="jumbotron">
-                <h2 class="display-3">Hello, world!</h2>
-                <p>Nullam quis risus eget vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-                <p><small>This line of text is meant to be treated as fine print.</small></p>
+                <h2 class="display-4">Hello, My Agency</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+                <p><small>"De finibus bonorum et malorum" Cicero</small></p>
               </div>
             {% endblock %}
             {% block footer %}{% endblock %}
