--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,11 +1,12 @@
 {% extends "base.html.twig" %}
 
-{% block title %}HOME de HomeAway{% endblock %}
+{% block title %}Home : Serving real estate - HomeAway{% endblock %}
 
 {% block container %}
 <div class="jumbotron">
-    <h2 class="display-4">Welcome HOME</h2>
-    <p>v(｡･ω･｡)ｨｪｨ♪ ceci fait cela v(｡･ω･｡)ｨｪｨ♪</p>
-    <p><small>ヽ(▽ ｀)ノﾜｰｲ♪ヽ(´▽｀)ノﾜｰｲ♪ヽ( ´▽)ノ.</small></p>
-  </div>
+  <h1 class="display-3">Serving real estate</h1>
+  <h2 class="display-4">Welcome HOME</h2>
+  <p>v(｡･ω･｡)ｨｪｨ♪ ceci fait cela v(｡･ω･｡)ｨｪｨ♪</p>
+  <p><small>ヽ(▽ ｀)ノﾜｰｲ♪ヽ(´▽｀)ノﾜｰｲ♪ヽ( ´▽)ノ.</small></p>
+</div>
 {% endblock %}
