--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,13 +34,17 @@
               
                 <div class="collapse navbar-collapse" id="navbarColor02">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item 
+                    {% if current_menu is defined and current_menu=='home' %}active{% endif %}">
                       <a class="nav-link" href="{{ path('home_away') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Buy</a>
+                    <li class="nav-item {% if current_menu is defined and current_menu=='properties' %}active{% endif %}">
+                      <a class="nav-link" href="{{ path('property.index') }}">Estate</a>
                     </li>
                     <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Buy</a>
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link" href="#">Pricing</a>
                     </li>
                     <li class="nav-item">
