--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -6,8 +6,8 @@
 <div class="jumbotron">
     <h1 class="display-3">Our properties</h1>
     <h2 class="display-4">..</h2>
-    <p>...</small></p>
-  </div>
+    <p>. {{ property.index }} . {{ property.index }} . {{ property.index }} . {{ property.index }} . {{ property.index }} .</p>
+</div>
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -15,7 +15,6 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'D:/Workspace_Ha/homeaway/src/Controller/PropertyController.php'|file_link(0) }}">src/Controller/PropertyController.php</a></code></li>
