property path avec app_

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
                       <a class="nav-link" href="{{ path('home_away') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item {% if current_menu is defined and current_menu=='properties' %}active{% endif %}">
-                      <a class="nav-link" href="{{ path('property_index') }}">Estate</a>
+                      <a class="nav-link" href="{{ path('app_property_index') }}">Estate</a>
                     </li>
                     <!-- <li class="nav-item">
                       <a class="nav-link" href="#">Buy</a>
