--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
               </div>{% endblock %}
             {% block navbar %}
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="{{ path('home_myagency') }}">My Agency</a>
+                <a class="navbar-brand" href="{{ path('app_home_base') }}">My Agency</a>
                 <!-- <a class="navbar-brand" href="/homeaway">My Agency</a> -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item 
                     {% if current_menu is defined and current_menu=='home' %}active{% endif %}">
-                      <a class="nav-link" href="{{ path('home_away') }}">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="{{ path('app_home_index') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item {% if current_menu is defined and current_menu=='properties' %}active{% endif %}">
                       <a class="nav-link" href="{{ path('app_property_index') }}">Estate</a>
