--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -5,10 +5,10 @@
 {% block container %}
 <div class="jumbotron">
     <h1 class="display-3">Our properties</h1>
-    <h2 class="display-4">..</h2>
-    <p>. {{ property.index }} . {{ property.index }} . {{ property.index }} . {{ property.index }} . {{ property.index }} .</p>
+    <h2 class="display-4">.✅.</h2>
+    <p>. current_menu: {{ current_menu }} . controller_name: {{ controller_name }} .</p>
 </div>
-<style>
+{# <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
@@ -20,5 +20,5 @@
         <li>Your controller at <code><a href="{{ 'D:/Workspace_Ha/homeaway/src/Controller/PropertyController.php'|file_link(0) }}">src/Controller/PropertyController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'D:/Workspace_Ha/homeaway/templates/property/index.html.twig'|file_link(0) }}">templates/property/index.html.twig</a></code></li>
     </ul>
-</div>
+</div> #}
 {% endblock %}
